--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -2,7 +2,7 @@
     <section>
         <h2>Lista de Contatos</h2>
         <ul>
-            <li *ngFor="let contato of lista; let i = index">{{ contato }} <button class="btn" (click)="removeItem(i)">Deletar</button></li>
+            <li *ngFor="let contato of lista; let i = index">{{ contato }} <button  (click)="removeItem(i)">Deletar</button></li>
 
         </ul>
     </section>
