adaptacoes pra aula

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -2,13 +2,14 @@
     <section class="container__header">
         <h1>{{title}}</h1>
         <div class="container__content">
-            <input type="text" placeholder="Nome" class="container__input" [(ngModel)]="nome" />
-            <input type="number" placeholder="Valor" class="container__input" [(ngModel)]="valor" />
-            <!-- <input type="date" placeholder="Data" class="container__input" [(ngModel)]="data" /> -->
+            <input type="text" placeholder="Nome" id="nome" class="container__input" [(ngModel)]="nome" />
+            <input type="number" placeholder="" id="valor" class="container__input" [(ngModel)]="valor" />
+            <input type="text" placeholder="Descrição" id="" class="container__input" [(ngModel)]="descricao" />
             <input type="tel" placeholder="Telefone" class="container__input" [(ngModel)]="telefone" />
             <input type="email" placeholder="E-mail" class="container__input" [(ngModel)]="email" />
-            <button type="button" id="btnAdd" (click)="addToList()">+ Novo</button>
+
         </div>
+        <button type="button" id="btnAdd" (click)="addToList()">+ Novo</button>
     </section>
     <app-contato [lista]="lista"></app-contato>
 </main>
