add servico component with template, styles, and tests

--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
     <section>
         <h2>Lista de Contatos</h2>
         <ul>
@@ -6,4 +6,11 @@
 
         </ul>
     </section>
-</main>
+</main> -->
+
+<div class="card">
+    <h3>{{nome}}</h3>
+    <p>E-mail: {{email}}</p>
+    <p>Telefone: {{telefone}}</p>
+    <ng-content/>
+</div>
