--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,4 +1,4 @@
-.nav__header {
+/* .nav__header {
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
@@ -12,4 +12,44 @@
     h3 {
         display: none;
     }
+} */
+
+nav {
+    background-color: #4caf50;
+    color: white;
+    padding: 1rem;
+    align-items: center;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu {
+    flex: 1;
+    text-align: center;
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    margin-top: 0 10px;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+nav a:hover {
+    text-decoration: none;
+}
+
+.logout button {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    padding: 5px 10px;
+    font-size: 1rem;
+    cursor: pointer;
 }
