--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,8 +1,3 @@
-<!-- <nav class="nav__header">
-    <h1>ORÇAMENTOR</h1>
-    <h3>Facilitando seus orçamentos.</h3>
-</nav> -->
-
 <nav>
     <span><a routerLink="/">Orçamentor</a></span>
     <div class="menu">
@@ -10,6 +5,6 @@
         <a routerLink="/contatos">Contatos</a>
     </div>
     <span class="logout">
-        <button (click)="logout()">Sair</button>
+        <button (click)="logout(123)">Sair</button>
     </span>
 </nav>
