--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,4 +1,6 @@
-<div>
-    <h1>Bem vindo!</h1>
+<div class="home">
+    <h1>Bem vindo</h1>
     <p>Gerencie seus contatos e cadastros!</p>
 </div>
+
+
