--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,7 +2,8 @@
     <span><a routerLink="/">Orçamentor</a></span>
     <div class="menu">
         <a routerLink="/usuario">Usuário</a> |
-        <a routerLink="/contatos">Contatos</a>
+        <a routerLink="/contatos">Contatos</a> |
+        <a routerLink="/servicos">Serviços</a>
     </div>
     <span class="logout">
         <button (click)="logout(123)">Sair</button>
