ajuste login e container

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -9,16 +9,20 @@
     </div>
   </div>
   <div class="container__body">
-    @for (item of contatosApi; track $index) {
-    <app-contato [nome]="item.nome" [telefone]="item.telefone" [email]="item.email">
-      <button class="btn" (click)="removeItem($index)">Deletar</button>
-    </app-contato>
+    @if (tipoConteudo === 'contatos') {
+      @for (item of contatosApi; track $index) {
+        <app-contato [nome]="item.nome" [telefone]="item.telefone" [email]="item.email">
+          <button class="btn" (click)="removeItem($index)">Deletar</button>
+        </app-contato>
+      }
     }
 
-    @for (item of servicosApi; track $index) {
-    <app-servico [nome]="item.nome" [descricao]="item.descricao" [preco]="item.preco">
-      <button class="btn" (click)="removeItem($index)">Deletar</button>
-    </app-servico>
+    @if (tipoConteudo === 'servicos') {
+      @for (item of servicosApi; track $index) {
+        <app-servico [nome]="item.nome" [descricao]="item.descricao" [preco]="item.preco">
+          <button class="btn" (click)="removeItem($index)">Deletar</button>
+        </app-servico>
+      }
     }
   </div>
   <div class="container__footer">
