--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,18 +1,19 @@
-<div class="d-flex vh-100 justify-content-center align-items-center">
-    <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
-        <h2 class="text-center mb-4">Login</h2>
+<div class="login-container">
+    <div class="login-card">
+        <h2 class="login-title">Login</h2>
 
         <form (submit)="login(form)" #form="ngForm">
-            <div class="mb-3">
+            <div class="form-group">
                 <label for="email" class="form-label">E-mail:</label>
                 <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email" required>
             </div>
 
-            <div class="mb-3">
+            <div class="form-group">
                 <label for="senha" class="form-label">Senha:</label>
                 <input type="password" class="form-control" id="senha" name="senha" [(ngModel)]="senha" required>
             </div>
 
-            <button type="submit" class="btn btn-primary w-100">Entrar</button>
+            <button type="submit" class="login-button">Entrar</button>
         </form>
     </div>
+</div>
