--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,11 +1,11 @@
 <nav>
-    <span><a routerLink="/">Orçamentor</a></span>
+    <span><a routerLink="/home">Orçamentor</a></span>
     <div class="menu">
         <a routerLink="/usuario">Usuário</a> |
         <a routerLink="/contatos">Contatos</a> |
         <a routerLink="/servicos">Serviços</a>
     </div>
     <span class="logout">
-        <button (click)="logout(123)">Sair</button>
+        <button (click)="logout()">Sair</button>
     </span>
 </nav>
